sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:15: error: not found: value i
}while(i> getNombreValeurs())
       ^